# myproject

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: tests.yaml
src/myproject/: task.py
tests/: test_task.py
