[project]
name = "myproject"
version = "0.0.1"
description = "the test project"
authors = [
    {name = "zhamileka", email = "zhamileka@gmail.com"},
]
dependencies = ["pip>=24.3.1", "ruff>=0.7.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff]
show-fixes = true
line-length = 120